--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -4,6 +4,10 @@
 
 /*Your Custom CSS Goes here*/
 
+img {
+	max-width: 100%;
+	}
+
 h1 {
   @apply text-4xl tracking-tighter mb-3 text-center lg:text-7xl;
 }
